# bitcan

./: Cargo.toml  README.md
src/: lib.rs  lock.rs  log.rs  model.rs
src/log/: hint.rs
src/log/snapshots/: bitcan__log__hint__test_hint_file__iter_key_records.snap  bitcan__log__hint__test_hint_file__iter_records.snap
src/snapshots/: bitcan__model__tests__hint_entry_st.snap  bitcan__model__tests__log_entry_checksum-2.snap  bitcan__model__tests__log_entry_checksum.snap  bitcan__tests__datafile_append_get.snap  bitcan__tests__datafile_append_read-2.snap  bitcan__tests__datafile_append_read-3.snap  bitcan__tests__datafile_append_read.snap
tests/: bitcan.rs
tests/snapshots/: bitcan__iter.snap  bitcan__merge_persist-2.snap  bitcan__merge_persist-3.snap  bitcan__merge_persist-4.snap  bitcan__rm_persist.snap
