[package]
name = "bitcan"
version = "0.1.0"
edition = "2021"

[dependencies]
adler = "1.0.2"
fs4 = "0.8.3"
snafu = "0.8.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { version = "1.1.2", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
serde-binary = "0.5.0"
byteorder = "1.4.3"

[dev-dependencies]
assert_fs = "1.1.1"
serde_json = "1.0.68"
serde_derive = "1.0.130"
predicates = "3.1.0"
insta = { version = "1.39.0", features = ["yaml", "redactions"] }
eyre = "0.6.12"
